--- a/atividade_Semana03.ipynb
+++ b/atividade_Semana03.ipynb
@@ -233,7 +233,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<h2>  linhas necessárias para teleop e para abrir o Rviz</h2>"
+    "<h2 style = \"color: blue\">  linhas necessárias para teleop e para abrir o Rviz</h2>"
    ]
   },
   {
@@ -250,7 +250,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<h2>Screenshot do Gazebo, Rviz e "
+    "<h2 style = \"color: blue\">Screenshot do Gazebo, Rviz e ImageView </h2>"
    ]
   },
   {
@@ -282,7 +282,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<h2> Código Implementado </h2>"
+    "<h2 style = \"color: blue\"> Código Implementado </h2>"
    ]
   },
   {
@@ -323,7 +323,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<h2> Resultado </h2>"
+    "<h2 style = \"color: blue\"> Resultado </h2>"
    ]
   },
   {
@@ -360,13 +360,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -383,11 +376,83 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<h2 style = \"color: blue\"> Código Implementado </h2>"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#! /usr/bin/env python\n",
+    "# -*- coding:utf-8 -*-\n",
+    "\n",
+    "\n",
+    "import rospy\n",
+    "import numpy as np\n",
+    "from geometry_msgs.msg import Twist, Vector3\n",
+    "from sensor_msgs.msg import LaserScan\n",
+    "\n",
+    "v = 0.1  # Velocidade linear\n",
+    "\n",
+    "distancia = None #Definindo distância\n",
+    "\n",
+    "def scaneou(dado):\n",
+    "    global distancia #Definindo distância como uma variável global\n",
+    "    # print(\"Faixa valida: \", dado.range_min , \" - \", dado.range_max )\n",
+    "    # print(\"Leituras:\")\n",
+    "    # print(np.array(dado.ranges).round(decimals=2))\n",
+    "    distancia = np.array(dado.ranges).round(decimals=2)[0]\n",
+    "    # print(\"Intensities\")\n",
+    "    # print(np.array(dado.intensities).round(decimals=2))9  2.69\n",
+    "\n",
+    "if __name__==\"__main__\":\n",
+    "    rospy.init_node(\"etapa_6\")\n",
+    "\n",
+    "    velocidade_saida = rospy.Publisher(\"/cmd_vel\", Twist, queue_size = 3 )\n",
+    "    recebe_scan = rospy.Subscriber(\"/scan\", LaserScan, scaneou)\n",
+    "\n",
+    "    # if min(np.array(dado.ranges).round(decimals=2)) < 1.02:\n",
+    "    #     v = -0.1\n",
+    "    # else:\n",
+    "    #     v = 0.1\n",
+    "\n",
+    "    try:\n",
+    "        while not rospy.is_shutdown():\n",
+    "            print(distancia)\n",
+    "            if distancia < 1.02:\n",
+    "                velocidade = Twist(Vector3(-0.1, 0, 0), Vector3(0, 0, 0))\n",
+    "                velocidade_saida.publish(velocidade)\n",
+    "                rospy.sleep(2)\n",
+    "            else:\n",
+    "                velocidade = Twist(Vector3(0.1, 0, 0), Vector3(0, 0, 0))\n",
+    "                velocidade_saida.publish(velocidade)\n",
+    "                rospy.sleep(2)\n",
+    "                    \n",
+    "    except rospy.ROSInterruptException:\n",
+    "        print(\"Ocorreu uma exceção com o rospy\")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<h2 style = \"color: blue\"> Resultado </h2>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from IPython.lib.display import YouTubeVideo\n",
+    "YouTubeVideo('5zk1olRTjBM')"
+   ]
   }
  ],
  "metadata": {
