arrumando os útlimos detalhes

--- a/atividade_Semana03.ipynb
+++ b/atividade_Semana03.ipynb
@@ -172,7 +172,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<h3 style=\"color:blue\"> Resposta: etapa_1.py </h3>"
+    "<h3 style=\"color:blue\"> Resposta: veja etapa_1.py </h3>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<h3 style=\"color:blue\"> Imagem Demonstrativa </h3>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<img src=\"etapa_1.png\">"
    ]
   },
   {
